--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@vercel/postgres": "^0.5.0",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
