--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx prisma db seed"
+    "postinstall": "npx prisma db push && npx prisma db seed"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.3",
